finally fix overflows

--- a/css/index.css
+++ b/css/index.css
@@ -23,18 +23,22 @@ body {
 
 /* DESKTOP */
 
-.desktop {
+.desktop-container {
     flex-grow: 1;
-    
+    position: relative;
+}
+
+.desktop {
+    height: 100%;
     padding: 10px;
 
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    
-    justify-content: flex-start;
+    display: grid;
+    grid-template-rows: repeat(auto-fill, 78px);
+    grid-template-columns: repeat(auto-fill, 64px);
+    grid-auto-flow: column;
 
-    user-select: none;
+  column-gap: 10px;
+  row-gap: 10px;
 }
 
 .desktop-icon {
